crates/qwik-optimizer-oxc/tests/snapshots/should_wrap_prop_from_destructured_array.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore, useTask$ } from "@qwik.dev/core";
import { useForm, useForm2 } from "./some-file.ts";

export const Input = component$<{ error: string; error2: string; error3: string }>((props) => {
  useTask$(({ track }) => {
    track(() => props.error);
    track(() => props.error2);
    track(() => props.error3);
  });

  return <></>;
});

export default component$(() => {
  const [store, math] = [useStore({ errors: {} }), Math.random()];
  const [[store2]] = [[useStore({ errors: {} })]];
  const { store3, math4 } = { store3: useStore({ errors: {} }), math4: Math.random() };
  const math2 = [Math.random()];
  const { math3 } = { math3: Math.random() };
  const [store4] = useForm();
  const { store5 } = useForm2();

  return (
    <div>
      <button
        onClick$={() => {
          store.errors.test = store.errors.test ? undefined : "ERROR TEST";
        }}
      >
        click
      </button>
      <Input
        error={store.errors.test}
        error2={store2.errors.test}
        error3={store3.errors.test}
        error4={store4.errors.test}
        error5={store5.errors.test}
        math={math}
        math2={math2}
        math3={math3}
        math4={math4}
      />
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
const i_BdCmNVLMFOM = () => import("./test.tsx_Input_component_BdCmNVLMFOM");
const i_onHnlG6lktY = () => import("./test.tsx_Input_useTask_onHnlG6lktY");
const i_jN9ZUuuADmk = () => import("./test.tsx_default_component_jN9ZUuuADmk");
const i_zo9wkw0NBzs = () => import("./test.tsx_default_component_button_q_e_click_zo9wkw0NBzs");
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useStore } from "@qwik.dev/core";
import { useForm, useForm2 } from "./some-file.ts";
const _hf0 = (p0) => p0.errors.test;
const _hf0_str = "p0.errors.test";
const _hf1 = (p0) => p0.errors.test;
const _hf1_str = "p0.errors.test";
const _hf2 = (p0) => p0.errors.test;
const _hf2_str = "p0.errors.test";
const _hf3 = (p0) => p0.errors.test;
const _hf3_str = "p0.errors.test";
const _hf4 = (p0) => p0.errors.test;
const _hf4_str = "p0.errors.test";
export const Input = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_BdCmNVLMFOM, "Input_component_BdCmNVLMFOM"),
);
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_jN9ZUuuADmk, "default_component_jN9ZUuuADmk"),
);

=== test.tsx_Input_component_BdCmNVLMFOM.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_onHnlG6lktY = () => import("./test.tsx_Input_useTask_onHnlG6lktY");
import { useTaskQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
const _hf0 = (p0) => p0.errors.test;
const _hf0_str = "p0.errors.test";
const _hf1 = (p0) => p0.errors.test;
const _hf1_str = "p0.errors.test";
const _hf2 = (p0) => p0.errors.test;
const _hf2_str = "p0.errors.test";
const _hf3 = (p0) => p0.errors.test;
const _hf3_str = "p0.errors.test";
const _hf4 = (p0) => p0.errors.test;
const _hf4_str = "p0.errors.test";
export const Input_component_BdCmNVLMFOM = (props) => {
  useTaskQrl(/* @__PURE__ */ qrl(i_onHnlG6lktY, "Input_useTask_onHnlG6lktY", [props]));
  return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, null, 3, "u6_0");
};

/*
{
  "origin": "test.tsx",
  "name": "Input_component_BdCmNVLMFOM",
  "entry": null,
  "displayName": "test.tsx_Input_component",
  "hash": "BdCmNVLMFOM",
  "canonicalFilename": "test.tsx_Input_component_BdCmNVLMFOM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Input_useTask_onHnlG6lktY.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
const _hf0 = (p0) => p0.errors.test;
const _hf0_str = "p0.errors.test";
const _hf1 = (p0) => p0.errors.test;
const _hf1_str = "p0.errors.test";
const _hf2 = (p0) => p0.errors.test;
const _hf2_str = "p0.errors.test";
const _hf3 = (p0) => p0.errors.test;
const _hf3_str = "p0.errors.test";
const _hf4 = (p0) => p0.errors.test;
const _hf4_str = "p0.errors.test";
export const Input_useTask_onHnlG6lktY = ({ track }) => {
  const props = _captures[0];
  track(() => props.error);
  track(() => props.error2);
  track(() => props.error3);
};

/*
{
  "origin": "test.tsx",
  "name": "Input_useTask_onHnlG6lktY",
  "entry": null,
  "displayName": "test.tsx_Input_useTask",
  "hash": "onHnlG6lktY",
  "canonicalFilename": "test.tsx_Input_useTask_onHnlG6lktY",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Input_component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "captureNames": [
    "props"
  ]
}
*/

=== test.tsx_default_component_jN9ZUuuADmk.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_zo9wkw0NBzs = () => import("./test.tsx_default_component_button_q_e_click_zo9wkw0NBzs");
import { _jsxSorted } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { useForm } from "./some-file.ts";
import { useForm2 } from "./some-file.ts";
import { Input } from "./test";
const _hf0 = (p0) => p0.errors.test;
const _hf0_str = "p0.errors.test";
const _hf1 = (p0) => p0.errors.test;
const _hf1_str = "p0.errors.test";
const _hf2 = (p0) => p0.errors.test;
const _hf2_str = "p0.errors.test";
const _hf3 = (p0) => p0.errors.test;
const _hf3_str = "p0.errors.test";
const _hf4 = (p0) => p0.errors.test;
const _hf4_str = "p0.errors.test";
export const default_component_jN9ZUuuADmk = () => {
  const [store, math] = [useStore({ errors: {} }), Math.random()];
  const [[store2]] = [[useStore({ errors: {} })]];
  const { store3, math4 } = {
    store3: useStore({ errors: {} }),
    math4: Math.random(),
  };
  const math2 = [Math.random()];
  const { math3 } = { math3: Math.random() };
  const [store4] = useForm();
  const { store5 } = useForm2();
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted(
        "button",
        null,
        {
          "q-e:click": /* @__PURE__ */ qrl(
            i_zo9wkw0NBzs,
            "default_component_button_q_e_click_zo9wkw0NBzs",
            [store],
          ),
        },
        "click",
        3,
        "u6_1",
      ),
      /* @__PURE__ */ _jsxSorted(
        Input,
        {
          math,
          math2,
          math3,
          math4,
        },
        {
          error: _fnSignal(_hf0, [store], _hf0_str),
          error2: _fnSignal(_hf1, [store2], _hf1_str),
          error3: _fnSignal(_hf2, [store3], _hf2_str),
          error4: _fnSignal(_hf3, [store4], _hf3_str),
          error5: _fnSignal(_hf4, [store5], _hf4_str),
        },
        null,
        3,
        "u6_2",
      ),
    ],
    1,
    "u6_3",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "default_component_jN9ZUuuADmk",
  "entry": null,
  "displayName": "test.tsx_default_component",
  "hash": "jN9ZUuuADmk",
  "canonicalFilename": "test.tsx_default_component_jN9ZUuuADmk",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_default_component_button_q_e_click_zo9wkw0NBzs.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
const _hf0 = (p0) => p0.errors.test;
const _hf0_str = "p0.errors.test";
const _hf1 = (p0) => p0.errors.test;
const _hf1_str = "p0.errors.test";
const _hf2 = (p0) => p0.errors.test;
const _hf2_str = "p0.errors.test";
const _hf3 = (p0) => p0.errors.test;
const _hf3_str = "p0.errors.test";
const _hf4 = (p0) => p0.errors.test;
const _hf4_str = "p0.errors.test";
export const default_component_button_q_e_click_zo9wkw0NBzs = () => {
  const store = _captures[0];
  store.errors.test = store.errors.test ? undefined : "ERROR TEST";
};

/*
{
  "origin": "test.tsx",
  "name": "default_component_button_q_e_click_zo9wkw0NBzs",
  "entry": null,
  "displayName": "test.tsx_default_component_button_q_e_click",
  "hash": "zo9wkw0NBzs",
  "canonicalFilename": "test.tsx_default_component_button_q_e_click_zo9wkw0NBzs",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_default_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "store"
  ]
}
*/
