crates/qwik-optimizer-oxc/tests/snapshots/should_wrap_type_asserted_variables_in_template.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal } from "@qwik.dev/core";

export default component$(() => {
  const count = useSignal(0);
  return <div>{(count as any).value}</div>;
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_jN9ZUuuADmk = () => import("./test.tsx_default_component_jN9ZUuuADmk");
import { useSignal } from "@qwik.dev/core";
export default /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_jN9ZUuuADmk, "default_component_jN9ZUuuADmk"));

=== test.tsx_default_component_jN9ZUuuADmk.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
export const default_component_jN9ZUuuADmk = () => {
	const count = useSignal(0);
	return /* @__PURE__ */ _jsxSorted("div", null, null, (count as any).value, 3, "u6_0");
}

/*
{
  "origin": "test.tsx",
  "name": "default_component_jN9ZUuuADmk",
  "entry": null,
  "displayName": "test.tsx_default_component",
  "hash": "jN9ZUuuADmk",
  "canonicalFilename": "test.tsx_default_component_jN9ZUuuADmk",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
