crates/qwik-optimizer-oxc/tests/snapshots/ternary_prop.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.ts ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_qsBJpzBk9qc = () => import("./test.tsx_Cmp_component_qsBJpzBk9qc");
const i_RtcZLg0Jc1I = () => import("./test.tsx_handleClick$_RtcZLg0Jc1I");
import { component$, $, useSignal } from "@qwik.dev/core";
export const Cmp = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_qsBJpzBk9qc, "Cmp_component_qsBJpzBk9qc"));

=== test.tsx_Cmp_component_qsBJpzBk9qc.ts === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_RtcZLg0Jc1I = () => import("./test.tsx_handleClick$_RtcZLg0Jc1I");
import { _jsxSorted } from "@qwik.dev/core";
export const Cmp_component_qsBJpzBk9qc = () => {
	const toggleSig = useSignal(false);
	const handleClick$ = /* @__PURE__ */ qrl(i_RtcZLg0Jc1I, "handleClick$_RtcZLg0Jc1I", [toggleSig]);
	return /* @__PURE__ */ _jsxSorted("button", { data-open: toggleSig.value ? true : undefined }, { "q-e:click": handleClick$ }, "Removing data-open re-renders", 3, "u6_0");
}

=== test.tsx_handleClick$_RtcZLg0Jc1I.ts === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const handleClick$_RtcZLg0Jc1I = () => {
	const toggleSig = _captures[0];
	toggleSig.value = !toggleSig.value;
};
