crates/qwik-optimizer-oxc/tests/snapshots/transform_qrl_in_regular_prop.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.ts ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_qsBJpzBk9qc = () => import("./test.tsx_Cmp_component_qsBJpzBk9qc");
const i_Zh6Ty0n2aaA = () => import("./test.tsx_Cmp_Zh6Ty0n2aaA");
export const Cmp = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_qsBJpzBk9qc, "Cmp_component_qsBJpzBk9qc"));

=== test.tsx_Cmp_component_qsBJpzBk9qc.ts === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_Zh6Ty0n2aaA = () => import("./test.tsx_Cmp_Zh6Ty0n2aaA");
import { _jsxSorted } from "@qwik.dev/core";
import { Cmp } from "./test";
export const Cmp_component_qsBJpzBk9qc = () => /* @__PURE__ */ _jsxSorted(Cmp, { foo: /* @__PURE__ */ qrl(i_Zh6Ty0n2aaA, "Cmp_Zh6Ty0n2aaA") }, null, "Hello Qwik", 3, "u6_0");

=== test.tsx_Cmp_Zh6Ty0n2aaA.ts === (ENTRY)
export const Cmp_Zh6Ty0n2aaA = () => console.log("hi there");
